# ModelForge

./: .gitignore  ModelForge.vpp  ModelForge.vpp.bak_000f  ModelForge.vpp.bak_001d  ModelForge.vpp.bak_002d  ModelForge.vpp.bak_003d  ModelForge.vpp.bak_004d  ModelForge.vpp.bak_005d  ModelForge.vpp.bak_006d  ModelForge.vpp.bak_007d  ModelForge.vpp.bak_008d  ModelForge.vpp.bak_009d  ModelForge.vpp.bak_010d  ModelForge.vpp.bak_011d  README.md
ModelForge/: CMakeLists.txt  attributeeditdialog.cpp  attributeeditdialog.h  attributeeditdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ModelForge/antlr/: USE.interp  USEBaseVisitor.cpp  USELexer.cpp  USEParser.cpp  USEVisitor.cpp  USEVisitor.h
ModelForge/antlr4/: CustomUSEVisitor.cpp
ModelForge/antlr4/src/: antlr4-common.h
ModelForge/examples/: BankAccount.json  BankAccount.use  BankAccount_default.clt  Biblioteca.use  Biblioteca_default.clt  CMakeLists.txt  Example.use  Family.use  GeneralizationTestUI.use  GeneralizationTestUI_default.clt  Negocio - copia.use  Negocio - copia_default.clt  Negocio.use  Negocio_default.clt  RedMetropolitana.use  TEST.use  TestAssociations.use  errors.use  save.use  testGen.use
ModelForge/examples/java/: AccountType.java
ModelForge/examples/java/bankaccount/: Account.java  AccountType.java  Bank.java  Employee.java  Person.java  SuperAccount.java
ModelForge/examples/java/family/: Assoc.java  Person.java  Person2.java  Test.java  Test2.java  Test3.java
ModelForge/examples/java/negocio/: Contrato.java  Empresa.java  Etiqueta.java  Pedido.java  Persona.java  Posesion.java  Producto.java  Productos_Pedido.java
ModelForge/examples/java/newmodel/: NewClass.java  NewClass1.java
ModelForge/include/: MetaAssociation.h  MetaEnum.h  MetaType.h  mainwindow.h
ModelForge/include/OCL/: AdditiveExpr.cpp  AdditiveExpr.h  AttributeNavigationExpr.h  BinaryExpr.cpp  BinaryExpr.h  ConditionalExpr.h  EqualityExpr.cpp  EqualityExpr.h  FactorExpr.cpp  FactorExpr.h  LetExpr.h  LogicalExpr.h  NavigationExpr.h  OCLExpr.h  ObjectOperationExpr.h  OperationExpr.h  PrimaryExpr.cpp  PrimaryExpr.h  PropertyCall.cpp  PropertyCall.h  PropertyCallExpr.h  QueryExpr.cpp  QueryExpr.h  RelationalExpr.cpp  RelationalExpr.h  TypeExpr.cpp  TypeExpr.h  UnaryExpr.h  VariableExpr.h
ModelForge/include/metamodel/: MetaAssociation.h  MetaAssociationClass.h  MetaAssociationEnd.h  MetaAttribute.h  MetaClass.h  MetaConstraint.h  MetaElement.h  MetaEnum.h  MetaModel.h  MetaOperation.h  MetaStateMachine.h  MetaType.h  MetaVariable.h  OCLExpression.h  Visibility.h
ModelForge/include/modelToText/: VisitorInterface.h  VisitorJava.h  VisitorUSE.h
ModelForge/include/ui/: ClassItemView.h  ModelGraphicsView.h  classEditDialog.cpp  classEditDialog.h
ModelForge/include/ui/components/: ConsoleHandler.h  ModelGraphicsScene.h  ModelGraphicsView.h  ThemeManager.h
ModelForge/include/ui/dialogs/: AddGeneraliaztionDialog.h  AssociationEditDialog.h  AttributeEditDialog.h  ClassEditDialog.h  ConditionEditDialog.h  ConstraintEditDialog.h  EnumEditDialog.h  MainWindow.h  OperationEditDialog.h  VariableEditDialog.h
ModelForge/include/ui/model/: ClassItemModel.h
ModelForge/include/ui/view/: AssociationClassItemView.h  AssociationItemView.h  BoxItemView.h  ClassItemView.h  EnumItemView.h  GeneralizationItemView.h
ModelForge/include/utils/: Commands.h  ItemViewClipboard.h  MessageBox.h
ModelForge/src/OCL/: AdditiveExpr.cpp  AttributeNavigationExpr.cpp  BinaryExpr.cpp  ConditionalExpr.cpp  EqualityExpr.cpp  FactorExpr.cpp  LetExpr.cpp  LogicalExpr.cpp  NavigationExpr.cpp  OCLExpr.cpp  ObjectOperationExpr.cpp  OperationExpr.cpp  PrimaryExpr.cpp  PropertyCallExpr.cpp  QueryExpr.cpp  RelationalExpr.cpp  TypeExpr.cpp  UnaryExpr.cpp  VariableExpr.cpp
ModelForge/src/metamodel/: MetaAssociation.cpp  MetaAssociationClass.cpp  MetaAssociationEnd.cpp  MetaAttribute.cpp  MetaClass.cpp  MetaConstraint.cpp  MetaEnum.cpp  MetaModel.cpp  MetaOperation.cpp  MetaStateMachine.cpp  MetaType.cpp  MetaVariable.cpp  OCLExpression.cpp
ModelForge/src/modelToText/: VisitorJava.cpp  VisitorUSE.cpp
ModelForge/src/modelTotText/: VisitorUSE.cpp
ModelForge/src/ui/: ClassItemView.cpp  ConsoleHandler.cpp  ModelGraphicsView.cpp
ModelForge/src/ui/components/: ConsoleHandler.cpp  ModelGraphicsScene.cpp  ModelGraphicsView.cpp  ThemeManager.cpp
ModelForge/src/ui/dialogs/: AddGeneralizationDialog.cpp  AddGeneralizationDialog.ui  AssociationEditDialog.cpp  AssociationEditDialog.ui  AttributeEditDialog.cpp  AttributeEditDialog.ui  ClassEditDialog.cpp  ClassEditDialog.ui  ConditionEditDialog.cpp  ConditionEditDialog.ui  ConstraintEditDialog.cpp  ConstraintEditDialog.ui  EnumEditDialog.cpp  EnumEditDialog.ui  MainWindow.cpp  MainWindow.ui  (+4 more)
ModelForge/src/utils/: Commands.cpp  ItemViewClipboard.cpp  MessageBox.cpp
ModelForge/styles/: CMakeLists.txt  dark.qss  darkPalette.xml  light.qss  lightPalette.xml
ModelForge/tests/: ANTLRVisitorTest.cpp  CMakeLists.txt  MetaAssociationClassTest.cpp  MetaAssociationEndTest.cpp  MetaAssociationTest.cpp  MetaAttributeTest.cpp  MetaClassTest.cpp  MetaConstraintTest.cpp  MetaEnumTest.cpp  MetaModelTest.cpp  MetaOperationTest.cpp  MetaStateMachineTest.cpp  MetaTypeTest.cpp  MetaVariableTest.cpp  RoundtripTransformationsTest.cpp
ModelForge/tests/ANTLRVisitorUSETestFiles/: CMakeLists.txt  TEST.use  associationClassDefinition_undefinedSuperClass.use  associationEndDefinition_undefinedClass.use  classDefinition_undefinedSuperClass.use  duplicateClassDefinition.use  invariant_undefinedScopeClass.use  prePostDefinition_differentNameOfParameterThanScopeOperation.use  prePostDefinition_differentNumberOfParametersThanScopeOperation.use  prePostDefinition_differentReturnTypeThanScopeOperation.use  prePostDefinition_differentTypeOfParameterThanScopeOperation.use  prePostDefinition_undefinedScopeClass.use  prePostDefinition_undefinedScopeOperation.use  redefinesAssociationEnd_undefinedRedefinedAssociationEnd.use  roundtrip_output.use  simpleType_undefinedTypeName.use  subsetsAssociationEnd_undefinedSubsettedAssociationEnd.use
(+22 files in other folders)
